Fix Safari 'locked-scrolling'
Unfortunately, this reintroduces the bug we had with a weird pixel
or two on the right of the page. This creates a horizontal scroll
bar in Chrome, but not Safari

--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -24,7 +24,7 @@ $desktop: "only screen and (min-width: 1026px)";
 }
 
 #app {
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 body {
